--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -61,6 +61,7 @@
   "css_hide_url_thumb": { "message": "Hide the link related to thumbnails in tweets (à la Twitter iOS/Android)" },
   "css_no_col_icns": { "message": "Hide icons in columns headers" },
   "css_small_icns_compose": { "message": "Icons are smaller in the Compose panel" },
+  "css_no_scrollbars": { "message": "Hide scrollbars" },
   "css_gray_icns_notifs": { "message": "Notifications icons are in grayscale" },
 
   "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
