--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -44,6 +44,7 @@
   "css_hide_context": { "message": "Hide 'In reply to' label on mentions" },
   "css_actions_on_right": { "message": "Show tweet actions on the right" },
   "css_actions_on_hover": { "message": "Show tweet actions on hover" },
+  "css_no_bg_modal": { "message": "Hide background behind fullscreen previews" },
   "no_hearts": { "message": "Show stars instead of hearts" },
   "rtl_text_style": { "message": "Detect and apply RTL style when needed" },
   "flash_tweets": { "message": "Make tweets flash in:" },
