--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-3.0.12 (To be released)
+:tada: 3.0.12 :tada:
 ===============
 - [Fix] Verified badges should display correctly when relevant
 - [Fix] Bring back the like/RT indicator on tweets because TweetDeck killed it
