--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -3,29 +3,29 @@
 		"message": "Emojis, miniatures et fonctionnalités avancées pour TweetDeck !"
 	},
 	"appName": {
-		"message": "BetterTweetDeck 3"
+		"message": "Better TweetDeck 3"
 	},
   "shareOnTD": { "message": "Partager sur TweetDeck" },
-  "settingsTitle": { "message": "Better TweetDeck: options" },
+  "settingsTitle": { "message": "Options Better TweetDeck" },
   "settings": { "message": "Options" },
-  "sec_tweetsName": { "message": "Tweets: noms et date" },
-  "sec_tweetsDisplay": { "message": "Tweets: affichage" },
+  "sec_tweetsName": { "message": "Tweets : noms et date" },
+  "sec_tweetsDisplay": { "message": "Tweets : affichage" },
   "sec_interface": { "message": "Interface" },
   "sec_content": { "message": "Contenu" },
   "sec_welcome": { "message": "Bienvenue" },
-  "sec_credits": { "message": "Crédits / A Propos" },
+  "sec_credits": { "message": "À propos" },
   "sec_changelog": { "message": "Nouveautés" },
-  "sec_debug": { "message": "Déboggage" },
+  "sec_debug": { "message": "Débogage" },
   "sec_links": { "message": "Liens" },
   "sec_donate": { "message": "Faire un don" },
-  "sec_preview": { "message": "Preview" },
+  "sec_preview": { "message": "Aperçu" },
   "sec_general": { "message": "Général" },
 
   "title_timeDisplay": { "message": "Affichage du temps"},
   "time_relative": { "message": "Relatif" },
   "time_absolute": { "message": "Absolu" },
   "time_absolute_us": { "message": "Absolu style 'US'" },
-  "time_custom": { "message": "Personnalisé (<a target='_blank' href='https://github.com/taylorhakes/fecha#formatting-tokens'>Formattage (anglais)</a>)" },
+  "time_custom": { "message": "Personnalisé (<a target='_blank' href='https://github.com/taylorhakes/fecha#formatting-tokens'>formattage (anglais)</a>)" },
   "time_short": { "message": "Court" },
   "time_full": { "message": "Long" },
   "time_full24": { "message": "Afficher longue date après 24h" },
@@ -41,57 +41,57 @@
   "title_avatars": { "message": "Avatars & détails" },
   "css_round_pic": { "message": "Avatars ronds" },
   "css_bigger_emojis": { "message": "Bigger emojis in tweets" },
-  "css_show_verified": { "message": "Affiche les badges 'vérifié'" },
-  "css_hide_context": { "message": "Masquer 'In reply to' sur les mentions" },
+  "css_show_verified": { "message": "Afficher les badges des comptes vérifiés" },
+  "css_hide_context": { "message": "Masquer 'in reply to' sur les mentions" },
   "css_actions_on_right": { "message": "Afficher les actions de tweets sur la droite" },
   "css_actions_on_hover": { "message": "Afficher les actions de tweets au survol" },
   "css_no_bg_modal": { "message": "Masquer le fond des aperçus en plein écran" },
   "no_hearts": { "message": "Afficher des étoiles au lieu des coeurs" },
   "rtl_text_style": { "message": "Détecter le texte se lisant de droite à gauche" },
-  "flash_tweets": { "message": "Faire 'flasher' les tweets dans:" },
-  "flash_tweets_mentions": { "message": "les colonnes Mentions" },
+  "flash_tweets": { "message": "Faire 'flasher' les nouveaux tweets dans :" },
+  "flash_tweets_mentions": { "message": "les colonnes 'Mentions'" },
   "flash_tweets_all": { "message": "toutes les colonnes" },
 
   "share_btd_item": { "message": "Ajouter le bouton 'Share on Better TweetDeck' dans le menu contextuel <small>Nécessite un redémarrage de Chrome</small>" },
   "share_short_txt": { "message": "Réduire automatiquement la longueur du texte en utilisant le partage <small>Nécessite un redémarrage de Chrome</small>" },
-  "no_tco": { "message": "Supprimer la redirection de t.co sur les liens" },
+  "no_tco": { "message": "Supprimer la redirection de <em>t.co</em> sur les liens" },
   "stop_autoplay_gifs": { "message": "Ne pas jouer les GIFs automatiquement" },
-  "thumbnails_from": { "message": "Afficher les miniatures de:" },
+  "thumbnails_from": { "message": "Afficher les miniatures de :" },
 
   "css_minimal_mode": { "message": "Activer le mode 'Minimaliste'" },
   "css_no_play_btn": { "message": "Masquer les icônes de lecture sur les vidéos" },
   "css_hide_url_thumb": { "message": "Masquer les urls relatives aux miniatures (à la Twitter iOS/Android)" },
   "css_no_col_icns": { "message": "Masquer les icônes dans les entêtes de colonnes" },
-  "css_small_icns_compose": { "message": "Les icônes sont plus petites dans le 'Compose'" },
-  "css_gray_icns_notifs": { "message": "Les icônes de notifications sont en niveaux de gris" },
+  "css_small_icns_compose": { "message": "Les icônes sont plus petites dans l'onglet 'Compose'" },
+  "css_gray_icns_notifs": { "message": "Les icônes de notification sont en niveaux de gris" },
   "css_no_scrollbars": { "message": "Masquer les barres de défilement" },
 
-  "btd_thx": { "message": "Merci d'avoir installé Better TweetDeck!" },
-  "btd_get_started": { "message": "C'est parti!" },
-  "btd_whatsBTD": { "message": "Better TweetDeck améliore votre expérience sur <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
-  "btd_default": { "message": "Les réglages par défaut ont été appliqués, n'hésitez pas à les modifier selon vos envies!" },
-  "btd_then": { "message": "Ensuite?" },
-  "btd_follow": { "message": "Vous devriez suivre <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> sur Twitter pour du support et des news sur Better TweetDeck (en anglais et français)" },
+  "btd_thx": { "message": "Merci d'avoir installé Better TweetDeck !" },
+  "btd_get_started": { "message": "C'est parti !" },
+  "btd_whatsBTD": { "message": "Better TweetDeck améliore votre expérience sur <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a> !" },
+  "btd_default": { "message": "Les réglages par défaut ont été appliqués, n'hésitez pas à les modifier selon vos envies !" },
+  "btd_then": { "message": "Ensuite ?" },
+  "btd_follow": { "message": "Vous devriez suivre <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> sur Twitter pour du support et des news sur Better TweetDeck (en anglais et français)." },
 
   "sec_infos": { "message": "Informations" },
   "debug_version": { "message": "Version" },
   "debug_ua": { "message": "User-Agent" },
   "sec_settings": { "message": "Réglages appliqués" },
 
-  "credits_author":  { "message": "Auteru" },
+  "credits_author":  { "message": "Auteur" },
   "credits_contribs":  { "message": "Contributeurs" },
   "credits_rsrc":  { "message": "Ressources utilisées" },
   "credits_links":  { "message": "Liens" },
   "credits_twitter":  { "message": "Better TweetDeck sur Twitter" },
   "credits_bugs":  { "message": "Bugs ou suggestions" },
-  "credits_source":  { "message": "Source sur GitHub" },
+  "credits_source":  { "message": "Sources sur GitHub" },
   "credits_author":  { "message": "Site web de l'auteur" },
 
-  "save_no":  { "message": "Pas de changements" },
+  "save_no":  { "message": "Réglages actuels" },
   "save_save":  { "message": "Appliquer" },
 
-  "donate_title":  { "message": "Aidez-moi à maintenir Better TweetDeck!" },
-  "donate_p3":  { "message": "Merci d'utiliser Better TweetDeck et d'aider à le garder en vie!" },
-  "donate_p2":  { "message": "Si vous pouvez vous le permettre et vous sentez généreux, cela serait <strong>incroyable</strong> si vous pouviez <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>donner sur Paypal</a> ou <a href='https://patreon.com/eramdam'>me supporter sur Patreon</a> (et ainsi avoir accès à des pré-versions de Better TweetDeck!)<br><br>Même la plus petite contribution aide!" },
+  "donate_title":  { "message": "Aidez-moi à maintenir Better TweetDeck !" },
+  "donate_p3":  { "message": "Merci d'utiliser Better TweetDeck et d'aider à le garder en vie !" },
+  "donate_p2":  { "message": "Si vous pouvez vous le permettre et vous sentez généreux, cela serait <strong>incroyable</strong> si vous pouviez <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>donner sur Paypal</a> ou <a href='https://patreon.com/eramdam'>me supporter sur Patreon</a> (et ainsi avoir accès à des pré-versions de Better TweetDeck !)<br><br>Même la plus petite contribution aide !" },
   "donate_p1": { "message": "Better TweetDeck est et sera toujours <strong>gratuit</strong> mais le développer prend du temps et coûte de l'argent<br> <br>Le principal coût est l'abonnement <a href='https://embed.ly/'>Embed.ly</a> permettant à Better TweetDeck les miniatures de différents services."}
 }
