options for slimmer scrollbars

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -46,6 +46,7 @@
   "css_actions_on_right": { "message": "Afficher les actions de tweets sur la droite" },
   "css_actions_on_hover": { "message": "Afficher les actions de tweets au survol" },
   "css_no_bg_modal": { "message": "Masquer le fond des aperçus en plein écran" },
+  "css_slim_scrollbars": { "message": "Barres de défilement plus fines" },
   "no_hearts": { "message": "Afficher des étoiles au lieu des coeurs" },
   "rtl_text_style": { "message": "Détecter le texte se lisant de droite à gauche" },
   "flash_tweets": { "message": "Faire 'flasher' les nouveaux tweets dans :" },
