--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -57,6 +57,7 @@
   "share_short_txt": { "message": "Réduire automatiquement la longueur du texte en utilisant le partage <small>Nécessite un redémarrage</small>" },
   "no_tco": { "message": "Supprimer la redirection de <em>t.co</em> sur les liens" },
   "stop_autoplay_gifs": { "message": "Ne pas jouer les GIFs automatiquement" },
+  "no_gif_pp": { "message": "Arrêter les GIFs dans les avatars dans les colonnes" },
   "thumbnails_from": { "message": "Afficher les miniatures de :" },
 
   "css_minimal_mode": { "message": "Activer le mode 'Minimaliste'" },
