:ledger: update the copy of the verified badge option accordingly

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -42,7 +42,7 @@
   "css_round_pic": { "message": "Avatars ronds" },
   "css_bigger_emojis": { "message": "Emojis plus gros dans les tweets" },
   "css_collapse_dms": { "message": "Masquer les DM lus" },
-  "css_show_verified": { "message": "Afficher les badges des comptes vérifiés" },
+  "css_show_verified": { "message": "Afficher les badges des comptes vérifiés par dessus les avatars" },
   "css_hide_context": { "message": "Masquer 'in reply to' sur les mentions" },
   "css_actions_on_right": { "message": "Afficher les actions de tweets sur la droite" },
   "css_actions_on_hover": { "message": "Afficher les actions de tweets au survol" },
