--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -49,6 +49,7 @@
   "css_no_bg_modal": { "message": "Hide background behind fullscreen previews" },
   "css_slim_scrollbars": { "message": "Thinner scrollbars" },
   "css_show_provider_indicator": { "message": "Show thumbnails' source on top of them" },
+  "css_hide_like_rt_indicators": { "message": "Hide Like/RT indicators on top of tweets" },
   "no_hearts": { "message": "Show stars instead of hearts" },
   "rtl_text_style": { "message": "Detect and apply RTL style when needed" },
   "flash_tweets": { "message": "Make tweets flash in:" },
