make the "tabs" permissions optional

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -57,9 +57,16 @@
   "flash_tweets": { "message": "Faire 'flasher' les nouveaux tweets dans :" },
   "flash_tweets_mentions": { "message": "les colonnes 'Mentions'" },
   "flash_tweets_all": { "message": "toutes les colonnes" },
-
-  "share_btd_item": { "message": "Ajouter le bouton 'Share on Better TweetDeck' dans le menu contextuel <small>Nécessite un redémarrage</small>" },
-  "share_short_txt": { "message": "Réduire automatiquement la longueur du texte en utilisant le partage <small>Nécessite un redémarrage</small>" },
+  
+  "share_request": { "message": "Demander l'autorisation" },
+  "share_granted": { "message": "Autorisation accordée !" },
+  "shared_btd_h1": { "message": "Partage" },
+  "share_btd_p1": { "message": "La fonctionnalité de partage requiert l'autorisation de voir les onglets ouverts. Cliquez sur le bouton ci-dessous pour demander ladite autorisation." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>ne peux pas</strong> lire le contenu de vos onglets et ne le stocke pas." },
+  "share_btd_p3": { "message": "Vous pouvez lire la <a href=\"https://developer.chrome.com/extensions/tabs\">documentation de Google</a> à propos de cette autorisation pour plus de détails" },
+  "share_btd_p4": { "message": "Toute modification sur cette page prendra effet après un redémarrage de Chrome" },
+  "share_btd_item": { "message": "Ajouter le bouton 'Share on Better TweetDeck' dans le menu contextuel" },
+  "share_short_txt": { "message": "Réduire automatiquement la longueur du texte en utilisant le partage" },
   "no_tco": { "message": "Supprimer la redirection de <em>t.co</em> sur les liens" },
   "stop_autoplay_gifs": { "message": "Ne pas jouer les GIFs automatiquement" },
   "no_gif_pp": { "message": "Arrêter les GIFs dans les avatars dans les colonnes" },
