--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -57,9 +57,15 @@
   "flash_tweets": { "message": "Make tweets flash in:" },
   "flash_tweets_mentions": { "message": "Mentions columns" },
   "flash_tweets_all": { "message": "Every column" },
-
-  "share_btd_item": { "message": "Add the 'Share on Better TweetDeck' action on contextual menu <small>Will be applied at next restart</small>" },
-  "share_short_txt": { "message": "Shorten the selected text while using the 'Share on Better TweetDeck' action <small>Will be applied at next restart</small>" },
+  
+  "share_request": { "message": "Request tabs reading permissions" },
+  "share_granted": { "message": "Permissions granted" },
+  "share_btd_p1": { "message": "The \"Share on TweetDeck\" feature requires permissions to see your open tabs to work properly. Click the button below to require those permissions." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>cannot</strong> read the content of your tabs and doesn't track it." },
+  "share_btd_p3": { "message": "Feel free to read <a href=\"https://developer.chrome.com/extensions/tabs\">Google's documentation</a> about this permission for more details." },
+  "share_btd_p4": { "message": "Any modification on this page will be applied after a Chrome restart" },
+  "share_btd_item": { "message": "Add the 'Share on Better TweetDeck' action on contextual menu" },
+  "share_short_txt": { "message": "Shorten the selected text while using the 'Share on Better TweetDeck' action" },
   "no_tco": { "message": "Remove t.co redirection on links" },
   "stop_autoplay_gifs": { "message": "Don't autoplay GIFs in columns" },
   "no_gif_pp": { "message": "No GIFs in profile pictures in columns" },
