--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -62,7 +62,7 @@
   "share_granted": { "message": "Autorisation accordée !" },
   "shared_btd_h1": { "message": "Partage" },
   "share_btd_p1": { "message": "La fonctionnalité de partage requiert l'autorisation de voir les onglets ouverts. Cliquez sur le bouton ci-dessous pour demander ladite autorisation." },
-  "share_btd_p2": { "message": "Better TweetDeck <strong>ne peux pas</strong> lire le contenu de vos onglets et ne le stocke pas." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>ne peux pas</strong> lire le contenu de vos onglets ni l'analyser." },
   "share_btd_p3": { "message": "Vous pouvez lire la <a href=\"https://developer.chrome.com/extensions/tabs\">documentation de Google</a> à propos de cette autorisation pour plus de détails" },
   "share_btd_p4": { "message": "Toute modification sur cette page prendra effet après un redémarrage de Chrome" },
   "share_btd_item": { "message": "Ajouter le bouton 'Share on Better TweetDeck' dans le menu contextuel" },
