--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -60,7 +60,7 @@
   
   "share_request": { "message": "Request tabs reading permissions" },
   "share_granted": { "message": "Permissions granted" },
-  "share_btd_p1": { "message": " In order to use the \"Share on TweetDeck\" feature, you'll need to approve certain permissions which you can do so by clicking below" },
+  "share_btd_p1": { "message": " In order to use the \"Share on TweetDeck\" feature, you'll need to approve certain permissions which you can do by clicking below" },
   "share_btd_p2": { "message": "Better TweetDeck <strong>cannot</strong> read the content of your tabs and doesn't track it." },
   "share_btd_p3": { "message": "Feel free to read <a href=\"https://developer.chrome.com/extensions/tabs\">Google's documentation</a> about this permission for more details." },
   "share_btd_p4": { "message": "Any modification on this page will be applied after a browser restart" },
