--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -41,6 +41,7 @@
   "title_avatars": { "message": "Avatars & details" },
   "old_replies": { "message": "Revert to the old replies style (pre 03/30/2017)" },
   "old_search": { "message": "Revert to the old search system (no columns for searches!)"},
+  "regex_filter": { "message": "Enable regular expression support in Mute filters"},
   "css_round_pic": { "message": "Rounded avatars" },
   "css_bigger_emojis": { "message": "Bigger emojis in tweets" },
   "css_collapse_dms": { "message": "Collapse read direct messages" },
