:ledger: improve copy of some settings

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -41,8 +41,8 @@
   "title_avatars": { "message": "Avatars & details" },
   "old_replies": { "message": "Revert to the old replies style (pre 03/30/2017)" },
   "old_search": { "message": "Revert to the old search system (no columns for searches!)"},
-  "css_round_pic": { "message": "Rounded avatars" },
-  "css_bigger_emojis": { "message": "Bigger emojis in tweets" },
+  "css_round_pic": { "message": "Make avatars rounded" },
+  "css_bigger_emojis": { "message": "Make emojis bigger in tweets" },
   "css_collapse_dms": { "message": "Collapse read direct messages" },
   "css_system_fonts": { "message": "Use the system font in the UI" },
   "css_show_verified": { "message": "Show 'verified' badges on top of avatars" },
@@ -69,18 +69,18 @@
   "share_btd_item": { "message": "Add the 'Share on Better TweetDeck' action on contextual menu" },
   "share_short_txt": { "message": "Shorten the selected text while using the 'Share on Better TweetDeck' action" },
   "no_tco": { "message": "Remove t.co redirection on links" },
-  "no_gif_pp": { "message": "No GIFs in profile pictures in columns" },
+  "no_gif_pp": { "message": "Stop GIFs from playing in avatars" },
   "thumbnails_from": { "message": "Display thumbnails from:" },
 
   "css_minimal_mode": { "message": "Enable the 'Minimal' theme" },
   "css_no_play_btn": { "message": "Hide the play button on video thumbnails" },
   "css_hide_url_thumb": { "message": "Hide the link related to thumbnails in tweets (à la Twitter iOS/Android)" },
   "css_no_col_icns": { "message": "Hide icons in columns headers" },
-  "css_small_icns_compose": { "message": "Icons are smaller in the Compose panel" },
+  "css_small_icns_compose": { "message": "Make buttons smaller in the Compose panel" },
   "css_no_scrollbars": { "message": "Hide scrollbars" },
-  "css_gray_icns_notifs": { "message": "Notifications icons are in grayscale" },
+  "css_gray_icns_notifs": { "message": "Display notifications icons in grayscale" },
 
-  "custom_width_columns": { "message": "Custom width for columns:" },
+  "custom_width_columns": { "message": "Apply a custom width for columns:" },
   "custom_width_size": { "message": "Width (any valid CSS value)" },
   
   "regex_filter": { "message": "Enable regular expression support in Mute filters"},
