--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -41,10 +41,10 @@
   "title_avatars": { "message": "Avatars & détails" },
   "old_replies": { "message": "Revenir à l'ancien style de mentions (pré 30/03/2017)" },
   "old_search": { "message": "Revenir à l'ancien fonctionnement de la recherche (pas de nouvelle colonne à chaque recherche)"},
-  "css_round_pic": { "message": "Avatars ronds" },
-  "css_bigger_emojis": { "message": "Emojis plus gros dans les tweets" },
-  "css_collapse_dms": { "message": "Masquer les DM lus" },
-  "css_show_verified": { "message": "Afficher les badges des comptes vérifiés par dessus les avatars" },
+  "css_round_pic": { "message": "Rendre les avatars ronds" },
+  "css_bigger_emojis": { "message": "Afficher les emojis plus gros dans les tweets" },
+  "css_collapse_dms": { "message": "Masquer les DMs lus" },
+  "css_show_verified": { "message": "Afficher les badges des comptes vérifiés au dessus des avatars" },
   "css_hide_context": { "message": "Masquer 'in reply to' sur les mentions" },
   "css_actions_on_right": { "message": "Afficher les actions de tweets sur la droite" },
   "css_actions_on_hover": { "message": "Afficher les actions de tweets au survol" },
@@ -75,8 +75,8 @@
   "css_no_play_btn": { "message": "Masquer les icônes de lecture sur les vidéos" },
   "css_hide_url_thumb": { "message": "Masquer les urls relatives aux miniatures (à la Twitter iOS/Android)" },
   "css_no_col_icns": { "message": "Masquer les icônes dans les entêtes de colonnes" },
-  "css_small_icns_compose": { "message": "Les icônes sont plus petites dans l'onglet 'Compose'" },
-  "css_gray_icns_notifs": { "message": "Les icônes de notification sont en niveaux de gris" },
+  "css_small_icns_compose": { "message": "Rendre les boutons plus petits dans l'onglet 'Compose'" },
+  "css_gray_icns_notifs": { "message": "Afficher les icônes de notifications en niveaux de gris." },
   "css_no_scrollbars": { "message": "Masquer les barres de défilement" },
   "css_system_fonts": { "message": "Utiliser la police du système dans l'interface de TweetDeck" },
 
